package where.$1_business_logic.$3_on_mapper.domain

case class CustomerId(value: String)
