package where.$1_business_logic.$3_on_mapper.domain

trait NoticeRepository {
  def campaign(customer: CampaignTargetCustomer): Unit
}
