package where.$1_business_logic.$3_on_mapper.mapper;

public enum Plan {
    FREE, PREMIUM
}
